--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,66 @@
 /*Maak hier jouw CSS!*/
+body {
+    font-size: 28px;
+}
+
+.a, .b, .c, .d, .e, .f {
+    color: white;
+    background-color: darkred;
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    margin: 0;
+}
+
+.a {
+    grid-area: a;
+}
+.b {
+    grid-area: b;
+}
+.c {
+    grid-area: c;
+}
+.d {
+    grid-area: d;
+}
+.e {
+    grid-area: e;
+}
+.f {
+    grid-area: f;
+}
+/* Mobile Screen */
+@media only screen and (max-width:800px) {
+    .content {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(7, minmax(50px, auto));
+        padding: 15px;
+        grid-gap: 16px;
+        grid-template-areas:
+            "a"
+            "b"
+            "c"
+            "d"
+            "e"
+            "."
+            "f";
+    }
+}
+/* Desktop Screen */
+@media only screen and (min-width:800px) {
+    .content {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 50px 190px 100px auto 50px;
+        padding: 15px;
+        grid-gap: 16px;
+        grid-template-areas:
+            "a c c"
+            "b c c"
+            "b e d"
+            "b e ."
+            "f f f";
+    }
+}
