--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,10 @@ body {
 .a, .b, .c, .d, .e, .f {
     color: white;
     background-color: #ba3b46;
+    display: grid;
+    flex-direction: row;
     align-content: center;
     justify-content: center;
-    display: flex;
     margin: 0;
 }
 
@@ -24,6 +25,7 @@ body {
 }
 .b {
     grid-area: b;
+    padding: 15px;
 }
 .c {
     grid-area: c;
@@ -56,7 +58,7 @@ body {
 @media only screen and (min-width:800px) {
     .content {
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 50px 190px 100px auto 50px;
+        grid-template-rows: 50px 174px 100px auto 50px;
         grid-template-areas:
             "a c c"
             "b c c"
